fix this button appearance on mobile

--- a/app/styles/components/_hearken-section.scss
+++ b/app/styles/components/_hearken-section.scss
@@ -249,6 +249,7 @@
   }
 
   .button, .button:hover {
+    appearance: none !important;
     border-radius: 30px !important;
     padding-top: 10px !important;
     padding-bottom: 10px !important;
